# exolobe

./: .gitignore  LICENSE
src/: CMakeLists.txt  eldb.cpp  eldb.hpp  eldb_cli.cpp  eldb_gtk.cpp  eldb_gtk_globalkeybind.cpp  eldb_gtk_globalkeybind.hpp  eldb_ptr.hpp  eldb_sqlite.cpp  eldb_sqlite.hpp  eldb_util.cpp  eldb_util.hpp  gtk_globalBinding.c  gtk_globalBinding.h  gtk_main.c  gtk_main.cpp  main.c  mcdb.c  mcdb.h  mcstd.c  mcstd.h
